* pa_rule-edit actions=display:ResolveAddressSummary - for shadow-json - split static and dynamic output - dynamic are tmp objects without value
* pa_rule-edit introduce 'filter=(user.count '<,>,+,!)' - )' / 'filter=(user is.in.file FILENAME)'
* pa_rule-edt | introduce actions=xml-extract - to extract rule xml information of matching rules - only working with additional argument shadow-json

BUGFIX:
* pa_device-edit - bugfix to print DG hierarchy in JSON
* pa_application-edit - bugfix to print APP information optimised in JSON
* pa_address-edit | bugfix for is.included-in.name if object is tmp and value is available
* pa_rule-edit bugfix for 'filter=(user has.regex /USER-group/)'

GENERAL:
* framework class PH - introduce function ACTIONstatus - make use in pa_tag-edit
* predefined.xml update to version 8465-6967


2.0.12 (20210930)
UTILS:
* pa_rule-edit - introduce new 'filter=(from has.same.to.zone)'/'filter=(to has.same.from.zone)'
* pa_device-edit - introduce new actions=DeviceGroup-remove / actions=AddressStore-rewrite
* pa_key-manager - introduce argument 'user' and 'pw' to create PAN-OS API-key without CLI interaction
* pa_key-manager - display .panconfkeystore filepath if using argument 'debugapi'
* introduce JSON response for most of the UTIL scripts with argument shadow-json - not available for pa_rule-edit and pa_application-edit yet
* pa_rule-edit introduce JSON response with argument shadow-json
* pa_application-edit introduce JSON response with argument shadow-json

BUGFIX:

GENERAL:
* move from print to PH::print_stdout - in preparation for JSON response, some missing parts fixed


2.0.11 (20210915)
UTILS:
* pa_key-manager - improve debugapi, to display also testAPI command - extend help with argument shadow-apikeynohidden for PAN-OS <9.0

BUGFIX:
* class PanAPIConnector - create PAN-OS XML API key